# rust-sample-api

./: .gitignore  1.json  README.md
bruno/: Create.bru  Get.bru  List.bru  Metrics.bru  Update.bru  bruno.json
docker/: Dockerfile  docker-compose.yaml
docker/data/aws-sqs/: aws-init.sh
workspace/: Cargo.toml
workspace/api/: Cargo.toml
workspace/application/: Cargo.toml
workspace/application/src/: main.rs
workspace/application/src/configuration/: app_runner.rs  app_state.rs  routes.rs  tracing_configuration.rs
workspace/application/src/errors/: app_errors.rs
workspace/application/src/handlers/: stub_entity_handler.rs
workspace/application/src/middleware/: request_middleware.rs  tracing_middleware.rs
workspace/application/src/services/: stub_entity_update_service.rs
workspace/application/src/use_cases/: stub_entity_use_case.rs
workspace/aws-sqs-consumer/: Cargo.toml
workspace/domain/: Cargo.toml
workspace/domain/src/: lib.rs
workspace/infrastructure/: Cargo.toml
workspace/infrastructure/src/: lib.rs
workspace/infrastructure/src/database/: postgres_database_configuration.rs
workspace/infrastructure/src/database/entities/: stub_database_entity.rs
workspace/infrastructure/src/database/migrations/: m20241126_000001_create_stub_table.rs  migrator.rs
workspace/infrastructure/src/database/repositories/: database_data.rs  database_data_seaorm.rs  stub_entity_sea_orm_postgres_repository.rs
workspace/infrastructure/src/env_var/: env_var_util.rs
workspace/infrastructure/src/http/mockserver/: mockserver_configuration.rs  mockserver_http_service.rs
workspace/infrastructure/src/logging/: logging_task_local.rs  logging_util.rs
workspace/infrastructure/src/messaging/: aws_sqs_messaging_configuration.rs  aws_sqs_messaging_service.rs
workspace/infrastructure/src/tracing/: tracing_util.rs
workspace/infrastructure/tests/: integration_tests.rs
workspace/infrastructure/tests/database/repositories/: stub_entity_sea_orm_postgres_repository_it.rs
(+19 files in other folders)
