[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
# libs
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }

# external
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
sea-orm = { version = "^1.1.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5.1", features = ["full"] }
anyhow = "1.0"
validator = { version = "0.19", features = ["derive"] }
axum-extra = "0.9.6"

once_cell = "1.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

opentelemetry = {version="*"}
tracing-opentelemetry = "0.28"
opentelemetry_sdk = { version = "*", features = ["async-std", "rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }